# wordlebotrs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  wapm.toml
.github/workflows/: integrate.yml
src/: wordlebot.rs
wordlists/: small5.txt  small6.txt
