[package]
name = "wordlebot"
version = "0.0.0"
edition = "2021"
description = "Solver for wordle like puzzles"
license = "MIT"
exclude = [".*","inputs/"]

[dependencies]
env_logger = "0.9.0"
hashbrown = "0.12.0"
itertools = "0.10.3"
log = "0.4.14"
rayon = "1.5.1"
structopt = "0.3.21"

[[bin]]
name = "wordlebot"
path = "src/wordlebot.rs"
